crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__new_with_a_resolved_constructor.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn make(object) -> object {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @7:5-7:23
    v1 = const.int 1  ; int
    v2 = new Foo(v1) ! bb1  ; object
    return v2
  bb1:
    propagate "make() at t.mwl:7"
}
