crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__new_with_no_declared_constructor.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn make() -> object {
  bb0:
    safepoint
    ; stmt s0 @5:5-5:22
    v0 = new Foo()  ; object
    return v0
}
