crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__passing_a_mixed_local_as_a_call_argument_round_trips.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, mixed) -> mixed {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; mixed
    ; stmt s0 @4:5-4:32
    retain v0
    v2 = call T::identity(this: v0, v1) ! bb1  ; mixed
    release v0
    return v2
  bb1:
    release v0
    propagate "m() at t.mwl:4"
}
