crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__passing_an_array_local_as_a_call_argument_retains_it.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> int {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:20
    v1 = const.int 1  ; int
    v2 = array.new ["0": v1]  ; array
    ; stmt s1 @5:5-5:27
    retain v2
    v3 = call T::take(v2) ! bb1  ; int
    release v2
    return v3
  bb1:
    release v2
    propagate "m() at t.mwl:5"
}
